--- a/blog-preview-card-main/styles.css
+++ b/blog-preview-card-main/styles.css
@@ -1,19 +1,25 @@
+html,
 body {
-  background-color: hsl(47, 88%, 63%);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  width: 100%;
   height: 100%;
-  overflow: hidden;
+  margin: 0;
+  font-family: "Figtree";
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: hsl(47, 88%, 63%);
+}
+
+p {
+  margin: 0;
 }
 
 .container {
   background-color: hsl(0, 0%, 100%);
   box-sizing: border-box;
   width: 384px;
-  height: fit-content;
   border-radius: 20px;
   display: flex;
   flex-direction: column;
@@ -31,7 +37,6 @@ body {
   display: flex;
   flex-direction: column;
   gap: 12px;
-  font-family: "Figtree";
 }
 
 .category {
@@ -42,7 +47,6 @@ body {
   font-weight: 800;
   font-size: 14px;
   line-height: 150%;
-  letter-spacing: 0px;
   width: fit-content;
 }
 
@@ -51,9 +55,6 @@ body {
   font-size: 14px;
   font-weight: 500;
   line-height: 150%;
-  letter-spacing: 0px;
-  width: fit-content;
-  height: fit-content;
 }
 
 .title {
@@ -62,7 +63,6 @@ body {
   font-weight: 800;
   font-size: 24px;
   line-height: 150%;
-  letter-spacing: 0px;
 }
 
 .title:hover {
@@ -75,15 +75,12 @@ body {
   font-size: 16px;
   font-weight: 500;
   line-height: 150%;
-  letter-spacing: 0px;
 }
 
 .author {
   display: flex;
   align-items: center;
   gap: 12px;
-  width: fit-content;
-  height: fit-content;
 }
 
 .author-img {
@@ -95,5 +92,4 @@ body {
   color: hsl(0, 0%, 7%);
   font-weight: 800;
   font-size: 14px;
-  font-family: "Figtree";
 }
